package gameLaby.laby;

import java.io.BufferedReader;
import java.io.FileReader;
import java.io.IOException;

/**
 * classe labyrinthe. represente un labyrinthe avec
 * <ul> des murs </ul>
 * <ul> un personnage (x,y) </ul>
 */
public class Labyrinthe {

   /**
    * Constantes char
    */
   public static final char MUR = 'X';
   public static final char PJ = 'P';
   public static final char VIDE = '.';

   /**
    * Constantes actions possibles
    */
   public static final String HAUT = "Haut";
   public static final String BAS = "Bas";
   public static final String GAUCHE = "Gauche";
   public static final String DROITE = "Droite";

   /**
    * attribut du personnage
    */
   public Perso pj;

   /**
    * les murs du labyrinthe
    */
   public boolean[][] murs;

   /**
    * retourne la case suivante selon une action
    *
    * @param x      case depart
    * @param y      case depart
    * @param action action effectuee
    * @return case suivante
    */
   static int[] getSuivant(int x, int y, String action) {
      switch (action) {
         case HAUT:
            // on monte une ligne
            y--;
            break;
         case BAS:
            // on descend une ligne
            y++;
            break;
         case DROITE:
            // on augmente colonne
            x++;
            break;
         case GAUCHE:
            // on diminue colonne
            x--;
            break;
         default:
            throw new Error("action inconnue");
      }
      return new int[]{x, y};
   }

   /**
    * charge le labyrinthe
    *
    * @param nom nom du fichier de labyrinthe
    * @return labyrinthe cree
    * @throws IOException probleme a la lecture / ouverture
    */
   public Labyrinthe(String nom) throws IOException {
      // ouverture fichier
      FileReader fichier = new FileReader(nom);
      BufferedReader bfRead = new BufferedReader(fichier);

      int nbLignes, nbColonnes;
      // lecture nblignes
      nbLignes = Integer.parseInt(bfRead.readLine());
      // lecture nbcolonnes
      nbColonnes = Integer.parseInt(bfRead.readLine());

      // creation labyrinthe vide
      this.murs = new boolean[nbColonnes][nbLignes];
      this.pj = null;

      // lecture des cases
      String ligne = bfRead.readLine();

      // stocke les indices courants
      int numeroLigne = 0;

      // parcourt le fichier
      while (ligne != null) {

         // parcours de la ligne
         for (int colonne = 0; colonne < ligne.length(); colonne++) {
            char c = ligne.charAt(colonne);
            switch (c) {
               case MUR:
                  this.murs[colonne][numeroLigne] = true;
                  break;
               case VIDE:
                  this.murs[colonne][numeroLigne] = false;
                  break;
               case PJ:
                  // pas de mur
                  this.murs[colonne][numeroLigne] = false;
                  // ajoute PJ
                  this.pj = new Perso(colonne, numeroLigne);
                  break;

               default:
                  throw new Error("Caractère inconnu : " + c);
            }
         }

         // lecture
         ligne = bfRead.readLine();
         numeroLigne++;
      }

      // ferme fichier
      bfRead.close();
   }


   /**
    * deplace le personnage en fonction de l'action.
    * gere la collision avec les murs
    *
    * @param action une des actions possibles
    */
   public void deplacerPerso(String action) {
      // case courante
      int[] courante = {this.pj.x, this.pj.y};

      // calcule case suivante
      int[] suivante = getSuivant(courante[0], courante[1], action);

      // si ce n'est pas un mur, on effectue le deplacement
      if (!this.murs[suivante[0]][suivante[1]]) {
         // on met a jour personnage
         this.pj.x = suivante[0];
         this.pj.y = suivante[1];
      }
   }


   /**
    * jamais fini
    *
    * @return fin du jeu
    */
   public boolean etreFini() {
      return false;
   }

   // ##################################
   // GETTER
   // ##################################

   /**
    * return taille selon Y
    *
    * @return taille selon Y
    */
   public int getLengthY() {
      return murs[0].length;
   }

   /**
    * return taille selon X
    *
    * @return taille selon X
    */
   public int getLength() {
      return murs.length;
   }

   /**
    * return mur en (i,j)
    *
    * @param x coordonnee x
    * @param y coordonnee y
    * @return mur en (i,j)
    */
   public boolean getMur(int x, int y) {
      // utilise le tableau de boolean
      return this.murs[x][y];
   }
}
