package gameLaby.laby;

/**
 * Représente le personnage du jeu
 */
public class Perso extends Position {

   /**
    * constructeur
    *
    * @param dx position selon x
    * @param dy position selon y
    */
   public Perso(int dx, int dy) {
      super(dx, dy);
   }

}
